quorum/test/tests/templating/Fail/B_10.quorum
class B is A

end
